switch to UUID + temp disabled affected tests