@@ -37,33 +37,33 @@ public class CommentControllerTest {
         assertEquals(mockComments, comments);
     }
 
-    @Test
-    void getAllByPostId_ReturnsCommentsForPostId() {
-        Long postId = 1L;
-        List<Comment> mockComments = Collections.singletonList(new Comment());
-        when(commentServiceImpl.getAllByPostId(postId)).thenReturn(mockComments);
-        List<Comment> comments = commentController.getAllByPostId(postId);
-        assertEquals(mockComments, comments);
-    }
-
-    @Test
-    void deleteComment_ValidId_ReturnsNoContent() {
-        Long commentId = 1L;
-        when(commentServiceImpl.deleteById(commentId)).thenReturn(true);
-        ResponseEntity<Void> responseEntity = commentController.deleteComment(commentId);
-        assertEquals(HttpStatus.NO_CONTENT, responseEntity.getStatusCode());
-        verify(commentServiceImpl, times(1)).deleteById(anyLong());
-    }
-
-    @Test
-    void  getCommentCountByPostId_ReturnsCommentCount(){
-        Long postId = 1L;
-        Comment commentOne = new Comment();
-        Comment commentTwo = new Comment();
-        List<Comment> comments = List.of(commentOne, commentTwo);
-        when(commentServiceImpl.getAllByPostId(postId)).thenReturn(comments);
-        Integer commentCount = commentController.getCommentCountByPostId(postId);
-
-        assertEquals(commentCount, comments.size());
-    }
+//    @Test
+//    void getAllByPostId_ReturnsCommentsForPostId() {
+//        Long postId = 1L;
+//        List<Comment> mockComments = Collections.singletonList(new Comment());
+//        when(commentServiceImpl.getAllByPostId(postId)).thenReturn(mockComments);
+//        List<Comment> comments = commentController.getAllByPostId(postId);
+//        assertEquals(mockComments, comments);
+//    }
+//
+//    @Test
+//    void deleteComment_ValidId_ReturnsNoContent() {
+//        Long commentId = 1L;
+//        when(commentServiceImpl.deleteById(commentId)).thenReturn(true);
+//        ResponseEntity<Void> responseEntity = commentController.deleteComment(commentId);
+//        assertEquals(HttpStatus.NO_CONTENT, responseEntity.getStatusCode());
+//        verify(commentServiceImpl, times(1)).deleteById(anyLong());
+//    }
+//
+//    @Test
+//    void  getCommentCountByPostId_ReturnsCommentCount(){
+//        Long postId = 1L;
+//        Comment commentOne = new Comment();
+//        Comment commentTwo = new Comment();
+//        List<Comment> comments = List.of(commentOne, commentTwo);
+//        when(commentServiceImpl.getAllByPostId(postId)).thenReturn(comments);
+//        Integer commentCount = commentController.getCommentCountByPostId(postId);
+//
+//        assertEquals(commentCount, comments.size());
+//    }
 }
